--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
+# cargo-features = ["edition2024"]
+
 [package]
 name = "rusty_scheme"
 version = "0.0.2"
+# default to 2015
+# edition = "2021"
 
 [dependencies]
-getopts = "^0.2"
+clap = { version = "4.5", features = ["derive", "env"] }
 libc = "^0.2"
