--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 # cargo-features = ["edition2024"]
 
 [package]
-name = "rusty_scheme"
-version = "0.0.2"
-# default to 2015
-# edition = "2021"
+name = "scheme"
+version = "0.1.0"
+edition = "2021"
+# edition = "2024"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive", "env"] }
