--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive", "env"] }
-libc = "^0.2"
+reedline = { version = "0.38" }
