--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5", features = ["derive", "env"] }
 reedline = { version = "0.38" }
+phf = { version = "0.11", features = ["macros"] }
