--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ phf = { version = "0.11", features = ["macros"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
