--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ tracing-appender = "0.2"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+lazy_static = "1.5"
+watchexec = "5"
