--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,18 @@ reedline = { version = "0.38" }
 phf = { version = "0.11", features = ["macros"] }
 
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = [
+  "env-filter",
+  "time",
+  "chrono",
+] }
 tracing-appender = "0.2"
+tracing-core = "0.1"
+tracing-log = "0.2"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 lazy_static = "1.5"
 watchexec = "5"
+crossterm = "0.28"
